Fix alignements

--- a/webui/src/app/navigation/sidebar/sidebar.component.scss
+++ b/webui/src/app/navigation/sidebar/sidebar.component.scss
@@ -38,6 +38,8 @@
 }
 
 .links a {
+  display: flex;
+  align-items: center;
   color: #fff;
   padding: 15px 40px;
   text-decoration: none;
@@ -46,17 +48,13 @@
 
 .links a:hover {
   background: #2370b8;
-  -webkit-transition: 0.3s background ease;
-  transition: 0.3s background ease;
-  display: flex;
-  align-items: center;
-  text-shadow: 0 0 18px rgb(255,255,255);
-  -webkit-transition: 0.3s color ease;
-  transition: 0.3s color ease;
+  text-shadow: 0 0 10px rgb(255,255,255);
+  transition: 0.3s all ease;
 }
 
 fa-icon {
   padding-right: 10px;
+  width: 10%;
 }
 
 .logout {
@@ -79,5 +77,7 @@ fa-icon {
 }
 
 .logout a:hover {
-  box-shadow: 0 0 18px rgba(255,255,255,0.7);
+  box-shadow: 0 0 20px rgba(255,255,255,0.7);
+  color: #fff;
+  transition: 0.3s all ease;
 }
